GNOME Bugzilla – Bug 686948
Wrong name for GstStructure representing CAT
Last modified: 2012-10-29 12:17:24 UTC
mpegtspacketizer.c uses "pat" as name for the GstStructure containing information about the CAT
Created attachment 227372 [details] [review] Fix name of structure
commit 43938bbf540c2928ec8e70ae3155801e61f182d2 Author: Sebastian Pölsterl <sebp@k-d-w.org> Date: Fri Oct 26 18:29:32 2012 +0200 tsdemux: Fix name of CAT GstStructure The structure previously was assigned the name "pat". https://bugzilla.gnome.org/show_bug.cgi?id=686948