tsdemux: Fix name of CAT GstStructure

The structure previously was assigned the name "pat".

https://bugzilla.gnome.org/show_bug.cgi?id=686948